<resources>
    <string name="app_name">E-Municipal Corporation</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="dashboard">Dashboard</string>
    <string name="latestfeature">Latest Feature:</string>
    <string name="vehicleparkingfeature">Vehicle Parking Feature</string>
    <string name="cityannouncementfeature">City Announcement Feature</string>
    <string name="multiplelanguagefeature">Multiple Languages Feature</string>
    <string name="cityinfofeature">City Information Feature</string>
    <string name="chatbotfeature">Chat Bot Feature</string>
    <string name="howtouseit">How To Use It?</string>
    <string name="covidststs">COVID-STATISTICS</string>
    <string name="emergency">Emergency</string>
    <string name="onlineservices">Online Services</string>
    <string name="mycityfeed">My City Feed</string>
    <string name="knowurcity">Know Your City</string>
    <string name="complain">Complain</string>
    <string name="vehicleparking">Vehicle Parking </string>
    <string name="womensafetyfeature">Women Safety Feature</string>
    <string name="marq">Click To My City Feed to know current announcements of city. COVID-HELPLINE DIAL 1075 / 18 00112545
        STAY HOME , STAY SAFE , WASH HANDS &amp; FACE REGULARLY. </string>

    <string name="others">Others</string>
    <string name="notification">Notification</string>
    <string name="feedback">Feedback</string>
    <string name="shareusidea">Share us idea</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="allemergencyservices">All Emergency Services</string>
    <string name="waterdrainage">Water/ Drainage Services Online</string>
    <string name="buslocator">Bus Locator</string>
    <string name="fireemergency">Fire &amp; Emergency Service Online</string>
    <string name="garbasebinlocator">Garbage Bin Locator</string>
    <string name="wardofficelo">Ward Office Locator</string>
    <string name="urbanhealthcarecenter">Urban Health Centre (UHC) Locator</string>
    <string name="toiletlocator">Toilet Locator</string>
    <string name="gasbill">Gas Bill</string>
    <string name="cityatglance">City At Glance</string>
    <string name="heritage">Heritage</string>
    <string name="otherattracion">Other Attractions</string>
    <string name="cityinfo">City Info.</string>
    <string name="citynews">City News</string>
    <string name="weather">Weather &amp; Air Quality</string>
    <string name="events">Events</string>
    <string name="plants">Plants</string>
    <string name="knowabouticity">Know More About Your City</string>
    <string name="vhnumber">Vehicle Number</string>
    <string name="imagepreview">Image Preview</string>
    <string name="enterphnumber">Enter Phone Number (10 Digit)</string>
    <string name="enterdescription">Enter Some Description</string>
    <string name="location">Location</string>
    <string name="send">Send</string>
    <string name="womensafety">Women Safety</string>
    <string name="addemergency">Add Emergency Contact</string>
    <string name="youaresafe">You Are Safe!!</string>
    <string name="allonlineservice">All Online Services Below</string>
    <string name="complainservices">Complain Services</string>


</resources>