<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@color/blue"
    tools:context=".VehicleParkingIssueActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/white"
                app:title="@string/vehicleparkingfeature"
                app:navigationIcon="@drawable/ic_bacbtn"
                android:outlineAmbientShadowColor="@color/purple_700"
                android:outlineSpotShadowColor="@color/purple_700"
                app:popupTheme="@style/Theme.ItRaeProject.PopupOverlay" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/vhnumber"
                            android:textColor="@color/blue"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="22sp"
                            />



                    </LinearLayout>

                    <EditText
                        android:id="@+id/resultET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autoLink="all"
                        android:background="@null"
                        android:padding="5dp"
                        android:textColor="#4169E1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/imagepreview"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_medium"
                        />

                    <ImageView
                        android:id="@+id/imageV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:maxHeight="250dp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="17dp"
                android:gravity="left"
                android:fontFamily="@font/poppins_medium"
                android:id="@+id/editText"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:textColor="@color/blue"
                android:hint="@string/enterphnumber"
                android:phoneNumber="true"
                android:textColorHint="@color/blue"
                android:layout_below="@+id/imageButton"
                android:layout_centerHorizontal="true" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_margin="2dp"
                android:paddingLeft="17dp"
                android:gravity="left"
                android:fontFamily="@font/poppins_medium"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:layout_alignRight="@+id/imageButton"
                android:layout_alignEnd="@+id/imageButton"
                android:hint="@string/enterdescription" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/location"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:id="@+id/getlocation"
                android:layout_below="@+id/editText2"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/send"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:id="@+id/btnSendSMS"
                android:layout_below="@+id/editText2"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="All Rights Reserved Vadodara Municipal Corporation 2022"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="11dp"
                android:layout_margin="15dp"
                android:layout_below="@+id/scrollview"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"/>
        </LinearLayout>



    </LinearLayout>
</ScrollView>